client/src/Screens/Home/Hero.css
.hero-section {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100vw;
    height: min(850px, 100vh);
    color: #fff;

    background: url("../../../public/assets/homepage-background.webp");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    position:relative;
}

.hero-section .image {
    height: 100%;
    /* outline: 1px solid lime; */
    overflow: hidden;
    width: 50%;
}

.hero-section .image img{
    aspect-ratio: 1/1;
    width: 100%;
}

.hero-section .content {
    position: relative;
    display: flex;
    align-items: end;
    justify-content: flex-start;
    flex-direction: column;
    width: 50%;
    /* outline: 1px solid lime; */
    padding-right: 2rem;
}

.hero-section .content * {
    max-width: 600px;
    /* outline: 1px solid yellow; */
}

.hero-section .content .headline {
    text-align: left;
    font-size: 4rem;
    line-height: 1em;
    font-weight: 800;
    padding: 1rem;
    background: linear-gradient(120deg, #fff, hsla(0, 0%, 100%, 30%));
    background-clip: text;
    color: transparent;
}

.hero-section .content .byline {
    text-align: left;
    font-size: 1.2rem;
    padding: 1rem;
}

.hero-section .content .button-group {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 1rem;
    padding: 1rem;
    width: 100%;
}

@media only screen and (max-width: 900px) {
    .hero-section .content .headline,
    .hero-section .content .byline {
        text-align: center;
    }

    .hero-section .content {
        width: 100vw;
        z-index: 2
    }

    .hero-section .image img {
        position:absolute;
        top: 0;
        right: 0;
        z-index: 0;
        opacity: 0.1;
    }

    .hero-section .content .button-group {
        justify-content: center;
    }
}

